prevent excessive card width by truncating longer names

--- a/src/components/ComparedItem/ComparedItemPreview/ComparedItemPreview.module.css
+++ b/src/components/ComparedItem/ComparedItemPreview/ComparedItemPreview.module.css
@@ -11,6 +11,10 @@
 	font-size: 1.5em;
 }
 
+.nameSmall{
+	font-weight: bold;
+}
+
 .date{
 	margin-bottom: 3px;
 }
